<resources>
    <string name="app_name">MyMovieList</string>

    // button
    <string name="button_login">로그인</string>
    <string name="button_add">추가</string>
    <string name="button_register">사용자 등록</string>
    <string name="button_enroll">등록</string>
    <string name="button_cancel">취소</string>
    <string name="button_select">선택</string>
    <string name="button_search">검색</string>
    <string name="button_list">record</string>
    <string name="button_calendar">calendar</string>
    <string name="button_info">information</string>
    <string name="button_writing">글작성</string>
    <string name="button_modify">수정</string>
    <string name="button_save">저장</string>
    <string name="button_back">이전</string>
    <string name="button_delete">삭제</string>
    <string name="button_photo">사진</string>
    <string name="button_menu">메뉴</string>
    <string name="button_check">확인</string>

    // textView
    <string name="textView">노트 등록</string>
    <string name="textView2">노트 이름</string>
    <string name="login">노트 선택</string>
    <string name="textView4">노트 수정</string>

    <string name="textView_content">내용</string>
    <string name="textView_photo">사진</string>
    <string name="textView_star">별점</string>
    <string name="textView_title">제목</string>
    <string name="textView_date">관람날짜</string>
    <string name="textView_platform">관람플랫폼</string>
    <string name="textView_index">번호</string>

    <string name="textView_list">list</string>
    <string name="search">검색</string>

    // EditText
    <string name="edit_id">ID 입력</string>
    <string name="editText_search">제목 입력</string>
    <string name="editText_content">200자 이내로 작성해주세요.</string>

    <string name="imageView_description">image</string>

    <string name="action_insert">추가</string>
    <string name="action_delete">삭제</string>
    <string name="action_modify">수정</string>
    <string name="action_info">정보</string>

    <string name="select_note">노트 선택</string>
    <string name="add_note">노트 추가</string>

    <string name="rank">순위</string>
    <string name="movieNm">제목</string>
    <string name="openDt">개봉일</string>
</resources>