<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="40dp">

    <TextView
        android:id="@+id/textView_rank"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:text="@string/rank" />

    <TextView
        android:id="@+id/textView_movieNm"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:text="@string/movieNm"
        android:maxLines="1"
        android:ellipsize="end" />

    <TextView
        android:id="@+id/textView_openDt"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:text="@string/openDt" />
</LinearLayout>