<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WritingActivity">


    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_platform"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/textView_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_star"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/textView_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_photo"
        app:layout_constraintVertical_bias="0.424" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_title"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/textView_platform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_platform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        app:layout_constraintVertical_bias="0.057" />

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:background="@drawable/edge"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@+id/editText_title"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/textView_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_platform"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:background="@drawable/edge"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/textView_platform"
        app:layout_constraintTop_toBottomOf="@+id/editText_title"
        app:layout_constraintVertical_bias="0.011"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:background="@drawable/edge"
        android:ems="10"
        android:hint="yyyy-m-d"
        android:importantForAutofill="no"
        android:inputType="date"
        android:labelFor="@+id/editText_date"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toEndOf="@+id/textView_date"
        app:layout_constraintTop_toBottomOf="@+id/editText_platform"
        app:layout_constraintVertical_bias="0.013"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_calendar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/calendar"
        android:backgroundTint="@color/blue4"
        android:contentDescription="@string/button_calendar"
        android:labelFor="@string/calendar"
        android:onClick="showDatePicker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/editText_date"
        app:layout_constraintTop_toBottomOf="@+id/editText_platform"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/textView_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_date"
        app:layout_constraintVertical_bias="0.002" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:isIndicator="false"
        android:numStars="5"
        android:progressBackgroundTint="@color/blue1"
        android:progressTint="@color/blue4"
        android:rating="0"
        android:stepSize="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toEndOf="@+id/textView_star"
        app:layout_constraintTop_toBottomOf="@+id/editText_date"
        app:layout_constraintVertical_bias="0.029"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:contentDescription="@string/imageView_description"
        android:src="@drawable/gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toEndOf="@+id/textView_photo"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/editText_content"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:background="@drawable/edge"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/editText_content"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:labelFor="@+id/editText_content"
        android:maxLength="200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toEndOf="@+id/textView_content"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/blue4"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_content"
        app:layout_constraintVertical_bias="0.612" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/blue4"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_save"
        app:layout_constraintTop_toBottomOf="@+id/editText_content"
        app:layout_constraintVertical_bias="0.612" />

</androidx.constraintlayout.widget.ConstraintLayout>