<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadingActivity">


    <TextView
        android:id="@+id/textView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_title"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/edge"
        android:text="@string/textView_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toEndOf="@+id/textView_Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/textView_Platform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_platform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/textView_platform"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/edge"
        android:text="@string/textView_platform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toEndOf="@+id/textView_Platform"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/textView_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Platform"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edge"
        android:text="@string/textView_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toEndOf="@+id/textView_Date"
        app:layout_constraintTop_toBottomOf="@+id/textView_platform"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_Star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Date"
        app:layout_constraintVertical_bias="0.084" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:isIndicator="true"
        android:numStars="5"
        android:progressBackgroundTint="@color/blue1"
        android:progressTint="@color/blue4"
        android:rating="0"
        android:stepSize="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toEndOf="@+id/textView_Star"
        app:layout_constraintTop_toBottomOf="@+id/textView_date"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textView_Photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Star"
        app:layout_constraintVertical_bias="0.142" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:contentDescription="@string/imageView_description"
        android:src="@drawable/gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toEndOf="@+id/textView_Photo"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/textView_Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Photo"
        app:layout_constraintVertical_bias="0.433" />

    <TextView
        android:id="@+id/textView_content"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/edge"
        android:text="@string/textView_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/textView_Content"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.236" />

    <Button
        android:id="@+id/button_check"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/blue4"
        android:text="@string/button_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_content"
        app:layout_constraintVertical_bias="0.529" />


</androidx.constraintlayout.widget.ConstraintLayout>